--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,18 +21,26 @@ eggs =
 version = git https://github.com/oca/ocb.git odoo 9.0
 addons =
     git https://github.com/OCA/operating-unit parts/operating-unit 9.0
+    git https://github.com/OCA/account-financial-reporting 9.0
 merges =
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-purchase_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-procurement_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-account_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-stock_account_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sales_team_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_stock_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-crm_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-crm_claim_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_contract_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-stock_operating_unit    
-
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-account_voucher_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-mrp_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_crm_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_expense_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_payroll_account_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-mis_builder_operating_unit
+    
 
 options.db_user = odoo
 
