--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ eggs =
 version = git https://github.com/oca/ocb.git odoo 9.0
 addons =
     git https://github.com/OCA/operating-unit parts/operating-unit 9.0
-    git https://github.com/OCA/account-financial-reporting 9.0
+    git https://github.com/OCA/account-financial-reporting parts/account-financial-reporting 9.0
 merges =
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-purchase_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-procurement_operating_unit
@@ -40,7 +40,7 @@ merges =
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_expense_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_payroll_account_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-mis_builder_operating_unit
-    
+    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-analytic_operating_unit
 
 options.db_user = odoo
 
