--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ find-links =
     http://download.gna.org/pychart/
 extensions = gp.vcsdevelop
 vcs-extend-develop =
-    git+https://github.com/anybox/anybox.recipe.odoo#egg=anybox.recipe.odoo
+    git+https://github.com/archetipo/anybox.recipe.odoo.git@fix_for_odoo10#egg=anybox.recipe.odoo
 vcs-update = Trues
 newest = false
 
@@ -18,71 +18,12 @@ eggs =
     gevent
     unidecode
     paramiko
-version = git https://github.com/oca/ocb.git odoo 9.0
+version = git https://github.com/oca/ocb.git odoo 10.0
 addons =
-    git https://github.com/OCA/operating-unit parts/operating-unit 9.0
-    git https://github.com/OCA/account-financial-reporting parts/account-financial-reporting 9.0
+    git https://github.com/OCA/operating-unit parts/operating-unit 10.0
 merges =
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-purchase_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-procurement_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-account_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-stock_account_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sales_team_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_stock_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-crm_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-crm_claim_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_contract_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-stock_operating_unit    
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-account_voucher_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-mrp_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-sale_crm_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_expense_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-hr_payroll_account_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-mis_builder_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 9.0-add-analytic_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-operating_unit
 
 options.db_user = odoo
 
 [versions]
-Babel=1.3
-Jinja2=2.7.3
-Mako=1.0.1
-MarkupSafe=0.23
-Pillow=2.7.0
-Python-Chart=1.39
-PyYAML=3.11
-Werkzeug=0.9.6
-argparse=1.2.1
-decorator=3.4.0
-docutils=0.12
-feedparser=5.1.3
-gdata=2.0.18
-gevent=1.0.2
-greenlet=0.4.7
-jcconv=0.2.3
-lxml=3.4.1
-mock=1.0.1
-ofxparse=0.14
-passlib=1.6.2
-psutil=2.2.0
-psycogreen=1.0
-psycopg2=2.5.4
-pyPdf=1.13
-pydot=1.0.2
-pyparsing=2.0.3
-pyserial=2.7
-python-dateutil=2.4.0
-python-ldap=2.4.19
-python-openid=2.2.5
-pytz=2014.10
-pyusb=1.0.0b2
-qrcode=5.1
-reportlab=3.1.44
-requests=2.6.0
-six=1.9.0
-suds-jurko=0.6
-vatnumber=1.2
-vobject=0.6.6
-wsgiref=0.1.2
-xlwt=0.7.5
