--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,14 @@ version = git https://github.com/oca/ocb.git odoo 10.0
 addons =
     git https://github.com/OCA/operating-unit parts/operating-unit 10.0
 merges =
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-analytic_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-account_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-stock_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-procurement_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-sales_team_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-crm_operating_unit
+
 
 options.db_user = odoo
 
