--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,12 +21,20 @@ eggs =
 version = git https://github.com/oca/ocb.git odoo 10.0
 addons =
     git https://github.com/OCA/operating-unit parts/operating-unit 10.0
+    git https://github.com/OCA/account-invoicing parts/account-invoicing 10.0
+    git https://github.com/OCA/account-financial-reporting parts/account-financial-reporting 10.0
 merges =
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-analytic_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-stock_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-procurement_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-sales_team_operating_unit
-    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-crm_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-stock_account_operating_unit
+    git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-mig-account_budget_operating_unit
+    git https://github.com/nikul-serpent/operating-unit parts/operating-unit 10-purchase_request_qweb_operating_unit
+    git https://github.com/nikul-serpent/operating-unit parts/operating-unit 10.0-mrp_operating_unit
+    git https://github.com/nikul-serpent/operating-unit parts/operating-unit 10.0-hr_expense_operating_unit
+    git https://github.com/nikul-serpent/operating-unit parts/operating-unit 10.0-account_invoice_merge_operating_unit
+    git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-mig-hr_payroll_account_operating_unit
+    git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-purchase_requisition_operating_unit
+    git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-purchase_request_operating_unit
+    git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-ou-readonly-issue-77
+    git https://github.com/acsone/operating-unit parts/operating-unit mis_builder_operating_unit-sbi
 
 
 options.db_user = odoo
