--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,6 +32,7 @@ merges =
     git https://github.com/nikul-serpentcs/operating-unit parts/operating-unit 10-purchase_request_qweb_operating_unit
     git https://github.com/nikul-serpentcs/operating-unit parts/operating-unit 10.0-mrp_operating_unit
     git https://github.com/nikul-serpentcs/operating-unit parts/operating-unit 10.0-hr_expense_operating_unit
+    git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-mig-hr_contract_operating_unit
     git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-mig-hr_payroll_account_operating_unit
     git https://github.com/darshan-serpent/operating-unit parts/operating-unit 10.0-purchase_requisition_operating_unit
     git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-account_invoice_merge_operating_unit
