--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,7 @@ addons =
     git https://github.com/OCA/purchase-workflow parts/purchase-workflow 10.0
     git https://github.com/OCA/account-invoicing parts/account-invoicing 10.0
     git https://github.com/OCA/reporting-engine parts/reporting-engine 10.0
+    git https://github.com/OCA/web parts/web 10.0
     git https://github.com/OCA/account-financial-reporting parts/account-financial-reporting 10.0
 merges =
     git https://github.com/Eficent/operating-unit parts/operating-unit 10.0-add-oca-dependencies
